Add link to font awesome in index.html so icons will appear and add styling for icons in style.css in pages folder.

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -23,3 +23,13 @@ h3 {
 #portfolio:hover, #email:hover, #location:hover, #phone:hover, #resume:hover {
     color: rgb(0, 0, 0, 0.7);
 }
+
+.icons {
+    width: 100%;
+    text-align: center;
+    letter-spacing: 3px;
+}
+
+#github {
+    color: black;
+}
