--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -2,6 +2,10 @@
     padding-top: 170px;
 }
 
+#container-portfolio {
+    padding-top: 100px;
+}
+
 h3, .p-index {
     text-align: center;
 }
@@ -14,7 +18,7 @@ h1 {
     font-size: 3em;
 }
 
-.p-index {
+.p-index, #p-portfolio {
     font-size: 1.1em;
 }
 
@@ -36,6 +40,10 @@ h1 {
 
 #github {
     color: black;
+}
+
+#p-portfolio {
+    margin-bottom: 50px;
 }
 
 #h1-contact {
