--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -1,9 +1,9 @@
 #container-index {
-    padding-top: 60px;
+    margin-top: 100px;
 }
 
 #container-portfolio {
-    padding-top: 60px;
+    padding-top: 100px;
 }
 
 #h1-about, .p-index {
