Fix margin for text area in home page and change page title.

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -1,6 +1,6 @@
 /* Adding margin-top to container in home page */
 #container-home {
-    margin-top: 100px;
+    margin-top: 5em;
     margin-bottom: 2em;
 }
 
