--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -6,7 +6,7 @@
 
 /* Adding padding-top to container in portfolio page */
 #container-portfolio {
-    padding-top: 100px;
+    margin-top: 5em;
 }
 
 /* Adding padding-top to container in contact page */
@@ -21,7 +21,7 @@ h1 {
 }
 
 /* Center h1 for projects */
-#h1-portfolio {
+#projects {
     text-align: center;
     margin-bottom: 1em;
 }
@@ -60,7 +60,7 @@ h3 {
 }
 
 /* Style h1 in contact page */
-#h1-contact {
+#contact {
     margin-bottom: 50px;
 }
 
